--- a/mod2/src/components/musicbox/musicbox.css
+++ b/mod2/src/components/musicbox/musicbox.css
@@ -25,13 +25,6 @@
     font-weight: 600;
 }
  
-.btn{
-    display: inline-block;
+.btn-blue{
     width: 100%;
-    padding: 10px 0;
-    border-radius: 6px;
-    background-color: lightblue;
-    text-decoration: none;
-    color:black;
-    text-align: center;
 }
