--- a/mod2/src/components/searchbar/index.css
+++ b/mod2/src/components/searchbar/index.css
@@ -1,6 +1,6 @@
 .btn{
-  display: inline-block;
-  padding: 10px 0;
+  padding: 10px 10px;
+  margin-bottom: 10px;
   border-radius: 6px;
   background-color: rgb(47, 160, 52);
   text-decoration: none;
@@ -11,19 +11,20 @@
 .btn:hover {
   filter: brightness(0.8);
 }
-.btn-search {
+/* .btn-search {
   background-color: rgb(164, 167, 165);
   padding: 16px;
-
-}
+  display: inline-block;
+} */
 .form-search .form-search__input {
   color: black;
   text-align: center;
-  padding: 10px 16px;
+  padding: 10px 20px;
   text-decoration: none;
   font-size: 17px;
   border-radius: 10px;
   outline: 0;
+  
   }
 .btn-search {
   display: inline-block;
@@ -31,6 +32,5 @@
   border: 0;
   outline: 0;
   border-radius: 5px;
-  margin-left: 10px;
   padding: 14px 15px;
 }
