--- a/mod2/src/components/playlistform/index.css
+++ b/mod2/src/components/playlistform/index.css
@@ -1,15 +1,35 @@
 .create-playlist-form {
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  margin-bottom: 50px;  
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 20px;
+  justify-content: center;
   }
-  
+
+.btn-create-playlist{
+  margin-top: 15px;
+  background-color: lightblue;
+  outline: 0;
+  border: 0;
+  padding-right: 10px;
+  padding-left: 10px;
+}
   .form-playlist {
-    min-width: 300px;
-    width: 400px;
+    display: flex;
+    flex-direction: column; 
+    width: 100%;
     margin-top: 24px;
   }
   
   .form-playlist__action {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
   }
+
+.input-title-playlist {
+  margin-bottom: 15px;
+}
