--- a/mod2/src/components/searchbar/index.css
+++ b/mod2/src/components/searchbar/index.css
@@ -1,5 +1,5 @@
 .btn{
-  padding: 10px 10px;
+  padding: 10px 0;
   margin-bottom: 10px;
   border-radius: 6px;
   background-color: rgb(47, 160, 52);
@@ -16,7 +16,7 @@
   padding: 16px;
   display: inline-block;
 } */
-.form-search .form-search__input {
+.form-search__input {
   color: black;
   text-align: center;
   padding: 10px 20px;
