--- a/mod2/src/pages/playlist/index.css
+++ b/mod2/src/pages/playlist/index.css
@@ -3,17 +3,17 @@
 	justify-content: space-evenly;
 	align-items: center;
 }
-.home__nocards {
-	margin-top: 16px;
-	width: 100%;
-	color: var(--white);
-	text-align: center;
-	font-size: 20px;
-}
 
 .home__cards {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	column-gap: 20px;
 	row-gap: 40px;
+}
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
 }
